--- a/examples/simple-wasm/index.html
+++ b/examples/simple-wasm/index.html
@@ -4,7 +4,7 @@
 
     <div id="target"></div>
     <script type="module">
-      import {default as init} from "./sqlite3.mjs";
+      import {default as init} from "https://cdn.jsdelivr.net/npm/sqlite-vec-wasm-demo@latest/sqlite3.mjs";
       function log(msg) {
         const pre = document.querySelector('#target').appendChild(document.createElement("pre"));
         pre.textContent = msg;
